# Dense-and-sparse-matrix-operations

./: README.md
DenseAndSparseMatrixOperations/: CMakeLists.txt  Diagnostics.hpp  PathConfig.hpp  main.cpp  run.sh
DenseAndSparseMatrixOperations/DenseOperations/: DenseLinearSystem.hpp  DenseMatrix.hpp
DenseAndSparseMatrixOperations/Files/MTXFiles/: README.txt
DenseAndSparseMatrixOperations/Files/MTXFiles/matrices10/: README.txt  laplacian_1.mtx  laplacian_2.mtx  laplacian_3.mtx  laplacian_4.mtx
DenseAndSparseMatrixOperations/Files/MTXFiles/matrices100/: README.txt  laplacian_1.mtx  laplacian_2.mtx  laplacian_3.mtx  laplacian_4.mtx
DenseAndSparseMatrixOperations/Files/MTXFiles/matrices1000/: README.txt  laplacian_1.mtx  laplacian_2.mtx  laplacian_3.mtx  laplacian_4.mtx
DenseAndSparseMatrixOperations/Files/MTXFiles/matrices10000/: README.txt  laplacian_1.mtx  laplacian_2.mtx  laplacian_3.mtx  laplacian_4.mtx
DenseAndSparseMatrixOperations/Files/MTXFiles/matrices15000/: README.txt  laplacian_1.mtx  laplacian_2.mtx  laplacian_3.mtx  laplacian_4.mtx
DenseAndSparseMatrixOperations/Files/MTXFiles/matrices20/: README.txt  laplacian_1.mtx  laplacian_2.mtx  laplacian_3.mtx  laplacian_4.mtx
DenseAndSparseMatrixOperations/Files/MTXFiles/matrices200/: README.txt  laplacian_1.mtx  laplacian_2.mtx  laplacian_3.mtx  laplacian_4.mtx
DenseAndSparseMatrixOperations/Files/MTXFiles/matrices2000/: README.txt  laplacian_1.mtx  laplacian_2.mtx  laplacian_3.mtx  laplacian_4.mtx
DenseAndSparseMatrixOperations/Files/MTXFiles/matrices20000/: README.txt  laplacian_1.mtx  laplacian_2.mtx  laplacian_3.mtx  laplacian_4.mtx
DenseAndSparseMatrixOperations/Files/MTXFiles/matrices30000/: README.txt  laplacian_1.mtx  laplacian_2.mtx  laplacian_3.mtx  laplacian_4.mtx
DenseAndSparseMatrixOperations/Files/MTXFiles/matrices40000/: README.txt
DenseAndSparseMatrixOperations/Files/MTXFiles/matrices50/: README.txt  laplacian_1.mtx  laplacian_2.mtx  laplacian_3.mtx  laplacian_4.mtx
DenseAndSparseMatrixOperations/Files/MTXFiles/matrices500/: README.txt  laplacian_1.mtx  laplacian_2.mtx  (+2 more)
DenseAndSparseMatrixOperations/LinearVector/: LinearVector.hpp
DenseAndSparseMatrixOperations/Mesh/: FaceAddressedMesh2D.hpp  MeshFileReader2D.hpp  Patch.hpp
DenseAndSparseMatrixOperations/SparseOperations/: SparseAddress.hpp  SparseLinearSystem.hpp  SparseMatrix.hpp
(+77 files in other folders)
